Made some local changes

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! This is Phani
+            <h4> This is another heading </h4>
+            This is Phani Kishore Pothiganti
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
