--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,6 +8,7 @@
                 margin: 0 auto;
                 color: yellow;
                 font-family: sans-serif;
+                padding-top: 200px;
             }
         </style>
     </head>
