--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,11 +4,13 @@
         <meta name= "viewport" content="width-device-width, initial-scale=1" />
         <style>
             .container {
-                max-width: 800px;
-                margin: 0 auto;
-                color: grey;
-                font-family: sans-serif;
-                padding-top: 200px;
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #6f5c5c;
+                    font-family: sans-serif;
+                    padding-top: 60px;
+                    padding-left: 20px;
+                    padding-right: 20px;
             }
         </style>
     </head>
