--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,17 +2,7 @@
     <head>
         <title> Phani Pothiganti - Article one </title>
         <meta name= "viewport" content="width-device-width, initial-scale=1" />
-        <style>
-            .container {
-                    max-width: 800px;
-                    margin: 0 auto;
-                    color: #6f5c5c;
-                    font-family: sans-serif;
-                    padding-top: 60px;
-                    padding-left: 20px;
-                    padding-right: 20px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
