--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,8 +1,11 @@
 <html>
     <head>
         <title> Phani Pothiganti - Article two </title>
+        <meta name= "viewport" content="width-device-width, initial-scale=1" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+       <div class="container">
         <div>
             <a href ="/">Home</a>
         </div>
@@ -18,6 +21,7 @@
             </p>
             
         </div>
+       </div>    
     </body>
     
 </html>
