--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,8 +1,11 @@
 <html>
     <head>
         <title> Phani Pothiganti - Article three </title>
+        <meta name= "viewport" content="width-device-width, initial-scale=1" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+      <div class="container">   
         <div>
             <a href ="/">Home</a>
         </div>
@@ -16,8 +19,8 @@
             <p>
                 This is the content of the article three.
             </p>
-            
         </div>
+       </div>    
     </body>
     
 </html>
