--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
             <h4> This is another heading </h4>
             This is Phani Kishore Pothiganti
         </div>
+        <script>
+            alert("hi I\'m Javascript");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
