--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id = "main-txt" class="center text-big bold">
             Hi! This is Phani
             <h4> This is another heading </h4>
             This is Phani Kishore Pothiganti
