[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,19 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class = "container" >
         <div class="center">
             <img id = "madi" src="https://pbs.twimg.com/profile_images/898869707951886337/INqwDUIN_400x400.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id = "main-txt" class="center text-big bold">
-            Hi! This is Phani
-            <h4> This is another heading </h4>
+        <h1> Personal </h1>
+        <div>
             This is Phani Kishore Pothiganti
         </div>
-        <script>
-            alert("hi I\'m Javascript");
-        </script>
+        <hr/>
+        <h1> Professional </h1>
+        <div>
+            I work at DXC Technology.
+        </div>
+        <div class = "footer">
+            
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        </div>
     </body>
 </html>
