--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
             I work at DXC Technology.
         </div>
         <div class = "footer">
-            
+            This button <button id = "counter">Click Me!</button> has been clicked <span id="count">0</span> times.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
