--- a/ui/index.html
+++ b/ui/index.html
@@ -21,11 +21,9 @@
                 This button <button id = "counter">Click Me!</button> has been clicked <span id="count">0</span> times.
             <hr/>
             <input type = "text" id="name" placeholder ="name"></input>
-            <input type = "submit" value = "Submit"></input>
-            <ul>
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+            <input type = "submit" value = "Submit" id ="submit-btn"></input>
+            <ul id="nameList">
+                
             </ul>
             </div>
             
