--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
                 This button <button id = "counter">Click Me!</button> has been clicked <span id="count">0</span> times.
             <hr/>
             <input type = "text" id="name" placeholder ="name"></input>
-            <input type = "submit" value = "Submit" id ="submit-btn"></input>
+            <input type = "submit" value = "Submit" id ="submit_btn"></input>
             <ul id="nameList">
                 
             </ul>
